#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

==============
	
Tag: V00-03-66
2016-05-18 Mikhail S. Dubrovin
- correct comments for word "bond"

Tag: V00-03-65
2016-05-18 Mikhail S. Dubrovin
- AreaDetector - add methods mask_edges, mask_neighbors (PSAS-139)

Tag: V00-03-64
2016-05-17 Mikhail S. Dubrovin
- add mask of unbonded pixel with eight neighbors
M       AreaDetector.py
M       PyDetectorAccess.py

Tag: V00-03-63
2016-05-17 Mikhail S. Dubrovin
- det_ndarr_raw_proc - common mode parameters tuning for pnccd  

Tag: V00-03-62
2016-05-16 Christopher O'Grady
- Try to clarify doc-strings related to masks

Tag: V00-03-61
2016-05-16 Mikhail S. Dubrovin
- det_ndarr_raw_proc - add evaluation of common mode parameters for a few detectors (PSAS-139)
                     - fix exaluation of hot pixels for pixel_status

Tag: V00-03-60
2016-05-12 Mikhail S. Dubrovin
- det_ndarr_raw_proc - average data in two stages non-gated and gated (PSAS-139)

Tag: V00-03-59
2016-05-02 Mikhail S. Dubrovin
- det_ndarr_average - add option -a to control image processing algorithms before averaging.

Tag: V00-03-58
2016-04-29 Christopher O'Grady and Dan Damiani
- Added Dan's code for new USDUSB detector and code for retrieving
  cspad2x2 gain maps.

Tag: V00-03-57
2016-04-25 Mikhail S. Dubrovin
- det_ndarr_raw_proc - use det.save_asdaq in stead of save_txtnda

Tag: V00-03-56
2016-04-22 Christopher O'Grady
- add OceanDetector to support oceanoptics spectrometer

Tag: V00-03-55
2016-04-20 TJ Lane and Christopher O'Grady
- add Generic1DDetector and subclassed GenericWFDetector to provide
  user-interface to new Generic1D datatype.

Tag: V00-03-54