@@ -252,6 +252,18 @@ class PyDetectorAccess :
 
 ##-----------------------------
 
+    def coords_xy(self, par) :
+        if not self._update_coord_arrays(par) : return None
+        return self.coords_x_arr, self.coords_y_arr
+
+##-----------------------------
+
+    def coords_xyz(self, par) :
+        if not self._update_coord_arrays(par) : return None
+        return self.coords_x_arr, self.coords_y_arr, self.coords_z_arr
+
+##-----------------------------
+
     def areas(self, par) :
         if self.geoaccess(par) is None : return None
         else :
@@ -340,6 +352,28 @@ class PyDetectorAccess :
     def tilt_geo(self, par, dtx, dty, dtz) :
         if self.geoaccess(par) is None : pass
         else : return self.geo.tilt_geo(None, 0, dtx, dty, dtz)
+
+##-----------------------------
+
+    def image_xaxis(self, par, pix_scale_size_um=None, x0_off_pix=None) :
+        pix_size = pix_scale_size_um if pix_scale_size_um is not None else self.pixel_size(par)
+        carr = self.coords_x(par)
+        cmin, cmax = carr.min(), carr.max() + 0.5*pix_size
+        if x0_off_pix is None :
+            return np.arange(cmin, cmax, pix_size)
+        else :
+            return np.arange(cmin-pix_size*x0_off_pix, cmax, pix_size)
+
+##-----------------------------
+
+    def image_yaxis(self, par, pix_scale_size_um=None, y0_off_pix=None) :
+        pix_size = pix_scale_size_um if pix_scale_size_um is not None else self.pixel_size(par)
+        carr = self.coords_y(par)
+        cmin, cmax = carr.min(), carr.max() + 0.5*pix_size
+        if y0_off_pix is None :
+            return np.arange(cmin, cmax, pix_size)
+        else :
+            return np.arange(cmin-pix_size*y0_off_pix, cmax, pix_size)
 
 ##-----------------------------
 
